--- a/src/main/resources/en_US.yml
+++ b/src/main/resources/en_US.yml
@@ -166,7 +166,7 @@ menus:
   buy_shop:
     title: "&8Buy available shop"
     size: 27
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     items:
       shop_size:
         material: CHEST
@@ -196,7 +196,7 @@ menus:
   edit_shop:
     title: "&8Edit shop"
     size: 54
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
     items:
       #Edit items for sale item
       edit_shopfront:
@@ -348,8 +348,7 @@ menus:
         - "&7Currently &b%stock% &7in stock"
         - "&7You can sell &b%available% &7more"
         - ""
-        - "&7>> Left click to buy"
-        - "&7>> Right click to sell"
+        - "&7>> Click to choose"
     admin_shop:
       buy_and_sell_lore:
         - "&7Mode&f: %mode%"
@@ -360,7 +359,7 @@ menus:
         - "%limit_lore%"
         - ""
         - "&7>> Left click to buy"
-        - "&7>> Right click to sell"
+        - "&7>> Click to choose"
       trade_lore:
         - "&7Mode&f: %mode%"
         - ""
@@ -480,7 +479,7 @@ menus:
       lore:
         - "&7Click to set player skin for this shop"
     back_slot: 35
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34 ]
     items:
       armorer:
         material: IRON_CHESTPLATE
@@ -560,7 +559,7 @@ menus:
   sell_shop:
     title: "&8Are you sure?"
     size: 27
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     items:
       no_cancel:
         material: RED_TERRACOTTA
@@ -592,7 +591,7 @@ menus:
     title: "&8Edit Item"
     size: 54
     item_slot: 4
-    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    filler_slots: [ 0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
     back_slot: 53
     limit_cycle:
       player: "&ePlayer&7 | Server"
@@ -704,7 +703,7 @@ menus:
   confirm_action:
     title: "&8Are you sure?"
     size: 27
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     items:
       accept:
         material: GREEN_TERRACOTTA
@@ -719,7 +718,7 @@ menus:
     title_sell: "&8Sell item"
     title_trade: "&8Trade item"
     title_command: "&8Buy command"
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 14, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 14, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     back_slot: 26
     size: 27
     confirm_slot: 13
