--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -166,7 +166,7 @@ menus:
   buy_shop:
     title: "&8购买可用商店"
     size: 27
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     items:
       shop_size:
         material: CHEST
@@ -195,7 +195,7 @@ menus:
   edit_shop:
     title: "&8编辑商店"
     size: 54
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
     items:
       #Edit items for sale item
       edit_shopfront:
@@ -342,8 +342,7 @@ menus:
         - "&7当前剩余 &b%stock% &7个物品"
         - "&7还可出售 &b%available% &7个"
         - ""
-        - "&7>> 左键点击购买"
-        - "&7>> 右键点击出售"
+        - "&7>> 点击选择"
     admin_shop:
       buy_and_sell_lore:
         - "&7模式&f: %mode%"
@@ -353,8 +352,7 @@ menus:
         - "&7卖价&f: &a%sell_price%"
         - "%limit_lore%"
         - ""
-        - "&7>> 左键点击购买"
-        - "&7>> 右键点击出售"
+        - "&7>> 点击选择"
       trade_lore:
         - "&7模式&f: %mode%"
         - ""
@@ -474,7 +472,7 @@ menus:
       lore:
         - "&7点击设置该商店的玩家皮肤"
     back_slot: 35
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 27, 28, 29, 30, 31, 32, 33, 34 ]
     items:
       armorer:
         material: IRON_CHESTPLATE
@@ -554,7 +552,7 @@ menus:
   sell_shop:
     title: "&8确认此操作?"
     size: 27
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     items:
       no_cancel:
         material: RED_TERRACOTTA
@@ -585,7 +583,7 @@ menus:
     title: "&8编辑物品"
     size: 54
     item_slot: 4
-    filler_slots: [0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53]
+    filler_slots: [ 0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53 ]
     back_slot: 53
     limit_cycle:
       player: "&e玩家&7 | 服务器"
@@ -694,7 +692,7 @@ menus:
   confirm_action:
     title: "&8是否进行该操作?"
     size: 27
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     items:
       accept:
         material: GREEN_TERRACOTTA
@@ -709,7 +707,7 @@ menus:
     title_sell: "&8出售物品"
     title_trade: "&8交易物品"
     title_command: "&8购买命令"
-    filler_slots: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 14, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
+    filler_slots: [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 14, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
     back_slot: 26
     size: 27
     confirm_slot: 13
