make custom amount menu toggleable

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -45,6 +45,8 @@ max_sell_amount: 64
 distribute_income: true
 #The admin shop that should open when doing /shop. Leave blank to disable.
 default_admin_shop: ""
+#Enable custom amount menu
+allow_custom_amount: true
 
 #----------------------- Villager settings -----------------------#
 
