feat: add %expire% placeholder for shop expiration time display in shopfront

--- a/src/main/resources/de_DE.yml
+++ b/src/main/resources/de_DE.yml
@@ -283,6 +283,7 @@ menus:
           - "&7Klicken um Handelsbenachrichtigungen zu deaktivieren"
 
   #-------------------- Shopfront --------------------#
+  #Placeholders: %expire%
   shopfront:
     title: '&8%shop%'
     #Placeholders: %item_name%, %mode%
