--- a/src/main/resources/en_US.yml
+++ b/src/main/resources/en_US.yml
@@ -282,6 +282,7 @@ menus:
           - "&7Click to disable trade notifications"
 
   #-------------------- Shopfront --------------------#
+  #Placeholders: %expire%
   shopfront:
     title: "&8%shop%"
     #Placeholders: %item_name%, %mode%
