--- a/src/main/resources/en_US.yml
+++ b/src/main/resources/en_US.yml
@@ -80,6 +80,8 @@ messages:
   type_limit_admin: "&bPlease type the buy/sell limit for this item in the chat (&c0 &bfor unlimited)..."
   reached_sell_limit: "&cYou can not sell more of this item!"
   reached_buy_limit: "&cYou can not buy more of this item!"
+  #Placeholders: %sold%, %total%, %unit%, %left%
+  batch_sell_partial: "&eSold %sold% of %total% (%unit% per trade). Left: %left%."
   reached_command_limit: "&cYou have reached the buy limit for this command!"
   money_left: "&aYou have %amount% left."
   money_currently: "&aYou currently have %amount%."
