--- a/src/main/resources/es_ES.yml
+++ b/src/main/resources/es_ES.yml
@@ -80,6 +80,8 @@ messages:
   type_limit_admin: "&bEscribe el límite de compra/venta de este item el chat (&c0&bpara ilimitado)..."
   reached_sell_limit: "&cNo puedes vender más de este tipo de item!"
   reached_buy_limit: "&cNo puedes comprar más de este tipo de item!"
+  #Placeholders: %sold%, %total%, %unit%, %left%
+  batch_sell_partial: "&eSold %sold% of %total% (%unit% per trade). Left: %left%."
   reached_command_limit: "&cHas alcanzado el límite de compra para este comando!"
   money_left: "&aTe quedan %amount%."
   money_currently: "&aTu actualmente tienes %amount%."
